--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@jitsi/rnnoise-wasm": "^0.2.1",
+    "@shiguredo/rnnoise-wasm": "^2025.1.5",
     "@sign-speak/react-sdk": "^0.7.3",
     "html2canvas": "^1.4.1",
     "mammoth": "^1.9.1",
@@ -27,6 +28,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-wasm": "^3.4.1"
   }
 }
